@startuml


class StationControl
class ChargeControl
class Door
class Display
class LogFile
class RFIDReader
class UsbChargerSimulator


interface IStationControl{
    RfidDetected(): void 
    DoorOpened(): void 
    DoorClosed(): void 
}
interface IChargeControl{
    CurrentValue: double
    IsConnected: bool
    StartCharge(): void
    StopCharge(): void
}
interface IDoor {
    DoorEvent: event 
    Door(): void
    UnlockDoor(): void
    LockDoor(): void
    SetDoorState(): DoorState 
}

interface IDisplay {
    ConnectPhone(): void 
    ScanRFID(): void 
    RFIDError(): void 
    ChargingBoxBusy(): void 
    PhoneNotDetected(): void 
    RemovePhone(): void 
    NormalCharging(): void 
    FullyCharged(): void 
    OverloadError(): void 
    NotConnected(): void 
    StopCharge(): void 
    StartCharge(): void 

    ConnectPhoneString: string 
    ScanRFIDString: string 
    RFIDErrorString: string 
    ChargingBoxBusyString: string 
    PhoneNotDetectedString: string 
    RemovePhoneString: string 
    NormalChargingString: string 
    FullyChargedString: string 
    OverloadErrorString: string 
    NotConnectedString: string 
    StopChargeString: string 
    StartChargeString: string 
}


interface ILogFile{
    LogDoorLocked(id): void
    LogDoorUnlocked(id): void
}

interface IRFIDReader{
    ReadRFID(int): void
    RfidEvent: event
}
interface IUsbCharger{
    CurrentValueEvent: event
    StartCharge(): void
    StopCharge(): void
    Connected: bool
    CurrentValue: double
}

enum DoorState{
    Locked
    Unlocked
}


class EventArgs{
    
}

class RfidEventArgs{
    RfidDetected: int
}

class CurrentEventArgs{
    Current: double
}

class DoorEventArgs{
    DoorState: DoorState
}



StationControl .u.|> IStationControl
ChargeControl .u.|> IChargeControl
Door .u.|> IDoor
Display .u.|> IDisplay
LogFile .u.|> ILogFile
RFIDReader .u.|> IRFIDReader
UsbChargerSimulator .u.|> IUsbCharger

StationControl --> IChargeControl
StationControl --> IDisplay
StationControl --> ILogFile
StationControl --> IDoor
StationControl --> IRFIDReader

ChargeControl --> IUsbCharger
ChargeControl -l-> IDisplay

RfidEventArgs -d-|> EventArgs
CurrentEventArgs -d-|> EventArgs
DoorEventArgs -d-|> EventArgs

IDoor --> DoorEventArgs
IRFIDReader --> RfidEventArgs
IUsbCharger --> CurrentEventArgs

IDoor --> DoorState

@enduml
